09/02/2024
- test2.py and test_path.py were deleted 
- In Cards.py:
  - SuitDeck: completed
  - Deck class:
    - __repr__() added
    - inverse() added
- functionality.py works without graphics
------------------------------------------------------------------
11/02/2024
- Progress on Window class.
  - Use of anchor keyword, sticky
------------------------------------------------------------------
14/02/2024
- In Cards.py:
  - first_cards() created
- In Windoes.py:
  - overlap_image modified
  - draw_card_in_SuitDeck() renamed to draw_suitDeck_card()
  - draw_card() deleted
  - Shuffle button tests with self.__deck 
------------------------------------------------------------------
15/02/2024
- In Window.py
  - Modify init to take a deck as an arguments
  - _draw_first_cards() modified with inv argument. This is useful for
    soros where we need to print the top three elements in reverse order
    BE VERY CAREFUL WITH THE ORDER OF THE CARDS
  - Add Buttons and Button commands
  ---------------------------------
  - Made Deck a button.
  - Change draw_suitDeck_card
  - find_card() deleted
  ---------------------------------
  - Add self._imgs_folder, modify _load_cards()
  - rename _draw_first_cards() to _draw_top_cards()
  - Add Blank card in soros at the beginning of the game.
- In Card.py
  - rename first_cards() to top_cards()

16/02/2024
- In Window.py
  - In _draw_top_cards() cover the case where the deck given is empty,
    i.e. when you won the game or when soros has no more cards.
  - Rename _load_cards() to _load_images().
  
- In Cards rename empty() to makeEmpty()

19/02/2024 --> replay_button branch
- In Window.py:
  _draw_initial_state() method created
- In Cards.py:
  - In CardColor class:
    - __del__() method added
  - In Card class:
    - __del__ method added
  - In Deck class:
    - Update contains() with a single line using any()
    - Modify makeEmpty(). Now we use .clear() instead of = []
    - Add __del__() method