@@ -71,3 +71,10 @@ https://tkinter-docs.readthedocs.io/en/latest/widgets/canvas.html
 
 - Pylint
   https://pythonspeed.com/articles/pylint/
+
+
+- Clear Canvas
+  https://www.tutorialspoint.com/how-to-clear-tkinter-canvas
+
+- state of Widgets in tkinter
+  https://anzeljg.github.io/rin2/book2/2405/docs/tkinter/create_image.html
