@@ -8,6 +8,8 @@ from PIL import Image, ImageTk
 from Cards import Card, Deck, SuitDeck
 
 class GameWindow:
+    """The Window for the Pasientza game."""
+
     def __init__(self, deck):
         # Create decks needed to play the game
         self.__deck = deck
@@ -16,7 +18,7 @@ class GameWindow:
         self.__suit_decks:list = [SuitDeck() for _ in range(8)]
 
         # Window configuration
-        self._win_dimensions = (980, 650)
+        self._win_dimensions = (980, 800)
         self._background = "seagreen4"
         self._title = "Pasientza"
 
@@ -24,7 +26,7 @@ class GameWindow:
         self._img_folder = "imgs"
         self._card_img_folder = "card_imgs"
         self._card_dimensions = (100, 130)
-        self._card_images:dict = {} # Card id, e.g. "10s" to image
+        self._card_images:dict = {} # Mapping card id, e.g. "10s" to image
 
         # Buttons configuration
         button_configuration = {"background": "steelblue3",
@@ -37,7 +39,8 @@ class GameWindow:
         self._root.title(self._title)
         self._root.configure(background = self._background)
         self._root.geometry(str(self._win_dimensions[0])
-                            + "x" + str(self._win_dimensions[1]))
+                            + "x"
+                            + str(self._win_dimensions[1]))
 
         # Create Frames
         frames_configurations = {"master": self._root,
@@ -45,133 +48,137 @@ class GameWindow:
 
         self._suitDecks_frame = tk.Frame(**frames_configurations)
         self._deck_frame = tk.Frame(**frames_configurations)
-        self._soros_cards_frame = tk.Frame(**frames_configurations)
+        self._soros_frame = tk.Frame(**frames_configurations)
         self._undo_frame = tk.Frame(**frames_configurations)
         self._replay_frame = tk.Frame(**frames_configurations)
 
         # Place frames on the root window
         self._suitDecks_frame.place(relx = 0.0, rely = 0.02, anchor = tk.NW)
         self._deck_frame.place(relx = 0.4, rely = .75, anchor = tk.NW)
-        self._soros_cards_frame.place(relx = 0.4 + .15, rely = .75, anchor = tk.NW)
+        self._soros_frame.place(relx = 0.55, rely = .75, anchor = tk.NW)
         self._undo_frame.place(relx = .85, rely = .9, anchor = tk.NW)
         self._replay_frame.place(relx = .85, rely = .8, anchor = tk.NW)
 
-        self._load_images(dim = self._card_dimensions) # Load Playing Cards
+        # Load Playing Cards
+        self._load_images(dim = self._card_dimensions)
 
-        # Create the 8 SuitDecks with the corresponding buttons.
-        self._all_SuitDeck_canvas:list = [] # SuitDeck canvas
+        # Create SuitDeck frames, canvas and buttons
+        self._all_SuitDeck_canvas:list = []
+        self._all_SuitDecks_buttons:list = []
 
         for i in range(8):
             # Create frame to store canvas and button
             suitDeck_frame = tk.Frame(master = self._suitDecks_frame,
                                       bg = self._background)
 
-            # Create suitDeck button
-            suitDeck_but = tk.Button(master = suitDeck_frame,
+            suitdeck_canv = tk.Canvas(master = suitDeck_frame)
+
+            suitDeck_but = tk.Button(
+                master = suitDeck_frame,
                 text = "Deck " + str(i + 1),
                 width = 8, height = 1,
                 **button_configuration,
                 command = lambda x = i : self._pick_suitDeck_callback(x))
 
-            # Create Canvas
-            canv = tk.Canvas(master = suitDeck_frame,
-                             width = self._card_dimensions[0],
-                             height = self._card_dimensions[1])
-            canv.create_image(0, 0, anchor = tk.NW, 
-                              image = self._card_images["Blank"])
-            self._all_SuitDeck_canvas.append(canv)
+            self._all_SuitDecks_buttons.append(suitDeck_but)
+            self._all_SuitDeck_canvas.append(suitdeck_canv)
 
-            suitDeck_frame.grid(row = 0, column = i, padx = 10, sticky=tk.NW)       
-            suitDeck_but.pack(pady = 5)
-            canv.pack(pady = 5)
+            suitDeck_frame.grid(row = 0, column = i, padx = 10, sticky=tk.NW)
 
-        # Create Deck Button
+        self._soros_canvas = tk.Canvas(master = self._soros_frame,
+                                       width = self._card_dimensions[0],
+                                       height = self._card_dimensions[1])
+
+        # ------------------------------- Buttons ------------------------------
         self._deck_button = tk.Button(master = self._deck_frame,
                                       image = self._card_images["Blue"],
                                       activebackground = "steelblue3",
                                       relief = tk.RAISED,
                                       command = self._deck_button_callback)
-        self._deck_button.pack(padx = 10)
 
-        # Create Soros (three cards) Canvas
-        self._soros_cards_canvas = tk.Canvas(master = self._soros_cards_frame,
-                                             width = self._card_dimensions[0],
-                                             height = self._card_dimensions[1])
-        self._soros_cards_canvas.pack()
-        self._soros_cards_canvas.create_image(0, 0, anchor = tk.NW,
-                                              image = self._card_images["Blank"])
-
-        # Create Undo Button
         self._undo_button = tk.Button(master = self._undo_frame,
                                       text = "Undo",
                                       width = 4, height = 1,
+                                      state = tk.DISABLED,
                                       **button_configuration,
                                       command = self._undo_callback)
-        self._undo_button.pack(pady = 5)
-        self._n_cards_removed_last_round = 0    # Number of cards removed from deck in last draw.
 
-        # Create Replay button
         self._replay_button = tk.Button(master = self._replay_frame,
                                         text = "New game",
                                         width = 7, height = 1,
                                         **button_configuration,
                                         command = self._replay_callback)
-        self._replay_button.pack(pady = 5)
 
-    # ---------------------------- BUTTON CALLBACKS ---------------------------
+        # ------------------------- Widget placement --------------------------
+        self._soros_canvas.pack()
+        self._deck_button.pack(padx = 10)
+        self._undo_button.pack(pady = 5)
+        self._replay_button.pack(pady = 5)
+        for i in range(8):
+            self._all_SuitDecks_buttons[i].pack(pady = 5)
+            self._all_SuitDeck_canvas[i].pack(pady = 5)
+
+        # Number of cards removed from deck in last draw.
+        self._n_cards_removed_last_round = 0
+
+        # ------------------------------ Drawing ------------------------------
+        self._draw_initial_state()
+
+    # ---------------------------- Button Callbacks ---------------------------
 
     def _deck_button_callback(self):
-        self._undo_button.configure(command = self._undo_callback)
-
-        # If deck is empty make soros the new deck and redraw Blue card.
-        if (self.__deck.isEmpty() == True):
-            self.__soros.inverse()
-            del self.__deck
-            self.__deck = copy.deepcopy(self.__soros)
-            self.__soros.makeEmpty()
-
-            self._deck_button.configure(image = self._card_images["Blue"])
+        # Modify undo button
+        self._undo_button.configure(
+            state = tk.NORMAL,
+            command = self._undo_callback)
 
         self._n_cards_removed_last_round = 0    # Required for undo button
 
+        # If deck is empty make soros the new deck and redraw Blue card.
+        if self.__deck.is_empty():
+            self.__soros.inverse()
+            del self.__deck
+            self.__deck = copy.deepcopy(self.__soros)
+            self.__soros.make_empty()
+
+            self._deck_button.configure(image = self._card_images["Blue"])
+
         # Place cards in soros
-        for _ in range(3): 
+        for _ in range(3):
             card = self.__deck.pop()
 
-            if (not isinstance(card, Card)):
-                print("End of deck")
+            if not isinstance(card, Card):
                 self._deck_button.configure(image = self._card_images["Blank"])
                 break
-            else:
-                self.__soros.push(card)
-                self._n_cards_removed_last_round += 1
 
-        # Draw soros top three with the third card on top 
-        self._draw_top_cards(deck = self.__soros, inv = True)
+            self.__soros.push(card)
+            self._n_cards_removed_last_round += 1
+
+        self._draw_soros()
 
     def _pick_suitDeck_callback(self, deck_id:int):
         moving_card = self.__soros.pop()
 
-        if (isinstance(moving_card, Card) == False): return
-        try:
-            self.__suit_decks[deck_id].push(moving_card)
-            self._undo_button.configure(command = do_nothing)
-        except:
-            self.__soros.push(moving_card)
-            # print("ERROR: Unable to handle this move")
+        if not isinstance(moving_card, Card):
             return
 
-        self.draw_suitDeck_card(deck_id, moving_card)
-
-        self._draw_top_cards(deck = self.__soros, inv = True)
+        try:
+            self.__suit_decks[deck_id].push(moving_card)
+            self._undo_button.configure(state = tk.DISABLED)
+            self.draw_card_in_suitDeck(deck_id, moving_card)
+            self._draw_soros()
+        except:
+            # Move card back to soros
+            self.__soros.push(moving_card)
 
     def _undo_callback(self):
         """Puts the cards last picked, back to deck.
         Can be used only once per round."""
-        if (self.__soros.isEmpty()): return
+        if self.__soros.is_empty():
+            return
 
-        # Redraw deck's card 
-        if (self.__deck.isEmpty()):
+        # Redraw deck's card
+        if self.__deck.is_empty():
             self._deck_button.configure(image = self._card_images["Blue"])
 
         for _ in range(self._n_cards_removed_last_round):
@@ -179,23 +186,16 @@ class GameWindow:
             go_back_card = self.__soros.pop()
             self.__deck.push(go_back_card)
 
-        self._n_cards_removed_last_round = 0    # Makes undo button callable only once
+        # Makes undo button callable only once
+        self._n_cards_removed_last_round = 0
+        self._undo_button.configure(state = tk.DISABLED)
 
-        # If after removal soros has no cards left
-        if (self.__soros.isEmpty()):
-            # Redraw Blank card
-            blank_image = self._card_images["Blank"]
-            self._soros_cards_canvas.configure(width = blank_image.width(),
-                                               height= blank_image.height())
-            self._soros_cards_canvas.create_image(0, 0, anchor = tk.NW,
-                                                  image = blank_image)
-        else:
-            # Redraw soros
-            self._draw_top_cards(deck = self.__soros, inv = True)
+        self._draw_soros()
 
     def _replay_callback(self):
         # Remove cards from suitDecks
-        for i in range(8): self.__suit_decks[i].makeEmpty()
+        for i in range(8):
+            self.__suit_decks[i].make_empty()
 
         # Remove all elements from deck and soros
         del self.__deck
@@ -213,9 +213,10 @@ class GameWindow:
     def _load_images(self, dim):
         """ Load cards, blank image and blue card and
         resize them with the dimensions given."""
-        # Load Deck
-        for fname in os.listdir(os.path.join(self._img_folder, self._card_img_folder)):
-            img = Image.open(os.path.join(self._img_folder, 
+        # Load playing cards
+        for fname in os.listdir(
+            os.path.join(self._img_folder, self._card_img_folder)):
+            img = Image.open(os.path.join(self._img_folder,
                                           self._card_img_folder, fname))
             img = img.resize(dim)
 
@@ -228,7 +229,8 @@ class GameWindow:
         self._card_images["Blank"] = ImageTk.PhotoImage(img)
 
         # Load the Blue playing card
-        img = Image.open(os.path.join(self._img_folder ,"Blue_playing_card.jpg"))
+        img = Image.open(
+            os.path.join(self._img_folder, "Blue_playing_card.jpg"))
         img = img.resize(dim)
         self._card_images["Blue"] = ImageTk.PhotoImage(img)
 
@@ -237,25 +239,40 @@ class GameWindow:
     def _draw_initial_state(self):
         """Draw the decks when the game starts."""
 
-        blank_image = self._card_images["Blank"]    # Blank Image
+        blank_image = self._card_images["Blank"]
 
         # Draw the top of the deck button
         self._deck_button.configure(image = self._card_images["Blue"])
 
-        # Draw blank card on soros
-        self._soros_cards_canvas.configure(width = self._card_dimensions[0],
-                                           height= self._card_dimensions[1])
-        self._soros_cards_canvas.create_image(0, 0, anchor = tk.NW,
-                                              image = blank_image)
+        # Draw soros
+        self._draw_soros()
 
         # Draw the blank card on every suitDeck
         for i in range(8):
-            self._all_SuitDeck_canvas[i].configure(width = self._card_dimensions[0],
-                                                   height = self._card_dimensions[1])
+            self._all_SuitDeck_canvas[i].delete("all")
+
+            self._all_SuitDeck_canvas[i].configure(
+                width = self._card_dimensions[0],
+                height = self._card_dimensions[1])
+
             self._all_SuitDeck_canvas[i].create_image(0, 0, anchor = tk.NW,
                                                       image = blank_image)
 
-    # TODO add a method to draw soros
+    def _draw_soros(self):
+        if self.__soros.is_empty():
+            self._soros_canvas.delete('all')
+
+            self._soros_canvas.configure(
+                width = self._card_dimensions[0],
+                height = self._card_dimensions[1])
+
+            self._soros_canvas.create_image(
+                0, 0, anchor = tk.NW,
+                image = self._card_images["Blank"])
+        else:
+            # Draw soros top three with the third card on top
+            self._soros_canvas.delete('all')
+            self._draw_top_cards(deck = self.__soros, inv = True)
 
     def _draw_top_cards(self, deck:Deck, n:int = 3, inv:bool = False):
         """Given a deck, it draws the first n cards.
@@ -269,44 +286,45 @@ class GameWindow:
         top_cards = deck.top_cards(n)
 
         # When deck is Empty draw blank card
-        if (deck.isEmpty()):
-            self._soros_cards_canvas.create_image(0, 0, anchor = tk.NW,
-                                                  image = self._card_images["Blank"])
+        if deck.is_empty():
+            self._soros_canvas.delete("all")
+            self._soros_canvas.create_image(
+                0, 0, anchor = tk.NW,
+                image = self._card_images["Blank"])
 
-        if (inv == True): top_cards.reverse()
+        if inv:
+            top_cards.reverse()
 
         for i, card in enumerate(top_cards):
             card_img = self._card_images[card.id()]
-            overlap_images(self._soros_cards_canvas, card_img,
+            overlap_images(self._soros_canvas, card_img,
                            x_overlap, y_overlap, i)
 
-    def draw_suitDeck_card(self, deck_id:int, card:Card):
+    def draw_card_in_suitDeck(self, deck_id:int, card:Card):
         """Add a card on the SuitDeck Canvas vertically."""
-        card_img = self._card_images[card.id()]        
+        card_img = self._card_images[card.id()]
+
         overlap_images(self._all_SuitDeck_canvas[deck_id], card_img, 0, 35,
-                       self.__suit_decks[deck_id].nCards() - 1)
+                       self.__suit_decks[deck_id].number_of_cards() - 1)
 
     def draw(self):
         """Draw window"""
         self._root.mainloop()
 
-def do_nothing(): print("Do nothing")
 
 def overlap_images(canvas, img, overlap_x, overlap_y, n:int):
     """Insert the n-th image (counting starts from 0) on a canvas.
     Images overlap by overlap_x on x axis and by overlap_y on y axis.
     All images are assumed to have the same size."""
 
+    # Draw image starting at position (n * overlap_x, n * overlap_y)
+    canvas.create_image(n*overlap_x, n*overlap_y, anchor = tk.NW, image = img)
+
     # Modify canvas' size
     canvas.config(width = img.width() + n * overlap_x,
                   height = img.height() + n * overlap_y)
 
-    # Draw image starting at position (n * overlap_x, n * overlap_y)
-    # Anchor point is the axis origin
-    canvas.create_image(n*overlap_x, n*overlap_y, anchor = tk.NW, image = img)
-
 if __name__ == "__main__":
-    # random.seed(100)
     d = Deck()
 
     win = GameWindow(d)
