@@ -1,8 +1,0 @@
-s1 = "abc"
-s2 = "ABC"
-
-def foo():
-    return s1 + s2
-
-print(foo())
-print(s1.join(s2))
